--- a/themes/inhabitent-theme/sass/_navigation.scss
+++ b/themes/inhabitent-theme/sass/_navigation.scss
@@ -141,21 +141,20 @@ a {
 }
 
 .site-branding {
-	background-image: url('../../images/logos/inhabitent-logo-tent.svg');
-	background-size: 50px 30px;
+	// background-image: url('../../images/logos/inhabitent-logo-tent.svg');
 	width: 50px;
 	height: 30px;
-}
+	}
 
 
 .main-navigation {
-	display: block;
+	display: flex;
 
 	ul {
 		list-style: none;
 	}
-
 }
+
 
 #primary-menu {
 	display: flex;
