--- a/themes/inhabitent-theme/style.css
+++ b/themes/inhabitent-theme/style.css
@@ -471,13 +471,12 @@ a {
   border-bottom: 0.5px solid #a1a1a1; }
 
 .site-branding {
-  background-image: url("../../images/logos/inhabitent-logo-tent.svg");
-  background-size: 50px 30px;
   width: 50px;
   height: 30px; }
 
 .main-navigation {
-  display: block; }
+  display: -ms-flexbox;
+  display: flex; }
   .main-navigation ul {
     list-style: none; }
 
