completed find us page. begun shop page

--- a/themes/inhabitent-theme/sass/_footer.scss
+++ b/themes/inhabitent-theme/sass/_footer.scss
@@ -3,7 +3,7 @@
 	flex: 1 0 100%;
 	background-image: url('../../images//dark-wood@2x.png');
 	font-family: 'merriweather', sans-serif;
-	margin-top: 60px;
+	padding-top: 10px;
 }
 .footer-container {
 	width: 80%;
