fixed about page

--- a/themes/inhabitent-theme/sass/style.scss
+++ b/themes/inhabitent-theme/sass/style.scss
@@ -67,4 +67,5 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "journal";
 @import "frontpage";
 @import "findus";
-@import "archive-product"
+@import "archive-product";
+@import "about";
