--- a/themes/inhabitent-theme/style.css
+++ b/themes/inhabitent-theme/style.css
@@ -1110,3 +1110,28 @@ object {
     display: flex;
     -ms-flex: 1 0 25%;
         flex: 1 0 25%; }
+
+.about-header {
+  text-transform: uppercase;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  font-size: 45px;
+  -ms-flex-align: center;
+      align-items: center;
+  color: white;
+  height: 100vh; }
+
+.about-content {
+  margin: 0 550px; }
+  .about-content h2 {
+    text-align: center;
+    font-size: 40px; }
+
+.about-text {
+  font-family: 'merriweather', sans-serif;
+  line-height: 1.75; }
+  .about-text h2 {
+    text-transform: uppercase;
+    font-family: 'novecento', sans-serif; }
