--- a/themes/inhabitent-theme/style.css
+++ b/themes/inhabitent-theme/style.css
@@ -1135,3 +1135,6 @@ object {
   .about-text h2 {
     text-transform: uppercase;
     font-family: 'novecento', sans-serif; }
+
+.search-area {
+  width: 600px; }
