--- a/themes/inhabitent-theme/sass/_variables.scss
+++ b/themes/inhabitent-theme/sass/_variables.scss
@@ -30,6 +30,9 @@ $color_white: white;
 $color_solid_border: #e1e1e1;
 $color_dashed_border: #c8c8c8;
 $color_green_hover: #19625d;
+$color_form_background: #f4f4f4;
+
+
 
 // Typography
 
