--- a/themes/inhabitent-theme/sass/_footer.scss
+++ b/themes/inhabitent-theme/sass/_footer.scss
@@ -13,6 +13,7 @@
 	display: flex;
 	flex-direction: row;
 	margin-top: 50px;
+	margin-left: 40px;
 }
 
 .contact-info {
@@ -27,6 +28,7 @@
 		text-transform: uppercase;
 	}
 	p {
+		margin-top: 9px;
 		i {
 			color: white;
 		}
