--- a/themes/inhabitent-theme/sass/_forms.scss
+++ b/themes/inhabitent-theme/sass/_forms.scss
@@ -4,32 +4,21 @@
 
 /* Buttons */
 
-button,
-input[type="button"],
-input[type="reset"],
+
 input[type="submit"] {
-	border: 1px solid;
-	border-color: #ccc #ccc #bbb;
-	border-radius: 3px;
-	background: #e6e6e6;
-	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
-	color: rgba(0, 0, 0, .8);
-	@include font-size(0.75);
-	line-height: 1;
-	padding: .6em 1em .4em;
-	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
-
+	background-color: $color_green_brand;
+	font-family: 'novecento', sans-serif;
+	font-size: 18px;
+	padding: 10px 30px;
+	color: white;
+	border: none;
+	text-transform: uppercase;
 	&:hover {
-		border-color: #ccc #bbb #aaa;
-		box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02);
+		background-color: $color_green_hover;
 	}
-
-	&:active,
-	&:focus {
-		border-color: #aaa #bbb #bbb;
-		box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5), inset 0 2px 5px rgba(0, 0, 0, 0.15);
-	}
+		
 }
+
 
 /* Fields */
 
@@ -53,10 +42,37 @@ input[type="email"],
 input[type="url"],
 input[type="password"],
 input[type="search"] {
-	padding: 3px;
+	padding: 0.3rem;
 }
 
 textarea {
 	padding-left: 3px;
 	width: 100%;
+}
+
+.wpcf7-form {
+	text-transform: uppercase;
+	line-height: 2;
+}
+
+.required {
+	color: $color_orange_brand;
+}
+
+.wpcf7-text {
+	background-color: $color_form_background;
+	border: 1px solid $color_solid_border;
+	margin-bottom: 20px;
+	margin-top: 10px;
+}
+
+.wpcf7-textarea {
+	background-color: $color_form_background;
+	border: 1px solid $color_solid_border;
+	margin-bottom: 20px;
+	margin-top: 10px;
+}
+
+.wpcf7-submit {
+
 }
