--- a/themes/inhabitent-theme/sass/_widgets.scss
+++ b/themes/inhabitent-theme/sass/_widgets.scss
@@ -22,6 +22,21 @@
 	font-size: 30px;
 }
 
+.textwidget {
+	p {
+		i {
+			font-size: 20px;
+			width: 20px;
+			margin: 5px;
+		}
+		a {
+			text-decoration: none;
+			color: $color_green_brand;
+		}
+	}
+}
+
+
 .widget-container {
 	display: flex;
 	flex-direction: column;
@@ -38,6 +53,13 @@
 		list-style: none;
     	margin-left: 0;
     	padding: 0;
+
+    	li {
+    		a {
+    			text-decoration: none;
+    			color: $color_green_brand;			
+    		}
+    	}
 	}
 }
 
