--- a/themes/inhabitent-theme/sass/style.scss
+++ b/themes/inhabitent-theme/sass/style.scss
@@ -70,3 +70,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "archive-product";
 @import "about";
 @import "searchpage";
+@import "single-product";
