changed header to become fixed positioned

--- a/themes/inhabitent-theme/style.css
+++ b/themes/inhabitent-theme/style.css
@@ -461,13 +461,21 @@ a {
     outline: 0; }
 
 /* Menus */
+.header-fixed {
+  height: 50px; }
+
 .site-header {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: justify;
       justify-content: space-between;
   padding: 0 300px;
-  border-bottom: 0.5px solid #a1a1a1; }
+  border-bottom: 0.5px solid #a1a1a1;
+  position: fixed;
+  z-index: 0;
+  width: 100%;
+  background-color: white;
+  opacity: 0.7; }
 
 .site-branding {
   width: 50px;
