--- a/themes/inhabitent-theme/sass/_navigation.scss
+++ b/themes/inhabitent-theme/sass/_navigation.scss
@@ -132,13 +132,20 @@ a {
 // 	}
 // }
 
-
+.header-fixed {
+	height: 50px;
+}
 
 .site-header {
 	display: flex;
 	justify-content: space-between;
 	padding: 0 300px;
 	border-bottom: 0.5px solid $color_light_grey;
+	position: fixed;
+	z-index: 0;
+	width: 100%;
+	background-color: white;
+	opacity: 0.7;
 }
 
 .site-branding {
