--- a/themes/inhabitent-theme/sass/_navigation.scss
+++ b/themes/inhabitent-theme/sass/_navigation.scss
@@ -165,7 +165,7 @@ a {
 			display: flex;
 			align-items: center;
 			a {
-				font-size: 16px;
+				font-size: 20px;
 				font-family: 'novecento', sans-serif;
 				color: $color_green_brand;
 			}
@@ -174,11 +174,24 @@ a {
 }
 
 //toggling search bar
-.search-field {
-	display: none;
+.search-form {
+	.search-field {
+		display: none;
+		text-transform: uppercase;
+		outline: none;
+		border: none;
+	}
+}	
+
+.search-submit {
+	margin-top: 10px;
+	border: none;	
+	background-color: white;
 }
 
-
+.icon-search {
+	color: $color_green_brand;
+}
 
 .main-navigation {
 	display: flex;
