--- a/themes/inhabitent-theme/style.css
+++ b/themes/inhabitent-theme/style.css
@@ -1210,13 +1210,50 @@ object {
     font-family: 'novecento', sans-serif; }
 
 .search-area {
-  width: 600px; }
+  width: 740px;
+  margin-right: 100px;
+  font-family: 'merriweather', sans-serif; }
 
 .search-form fieldset {
   border: none; }
 
 .search-field {
   display: none; }
+
+.search-title {
+  font-size: 50px;
+  font-family: 'novecento', sans-serif;
+  margin-bottom: 0; }
+  .search-title a {
+    font-size: 40px;
+    text-decoration: none;
+    color: #248A83; }
+
+.search-comments {
+  font-family: 'novecento', sans-serif;
+  font-size: 20px;
+  margin: 20px 0; }
+
+.search-button {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  padding: 10px;
+  border: 1px solid black;
+  text-transform: uppercase;
+  color: black;
+  width: 175px;
+  font-family: 'novecento', sans-serif; }
+  .search-button:hover {
+    background-color: #248A83;
+    color: white;
+    border: 1px solid #248A83; }
+    .search-button:hover a {
+      color: white; }
+  .search-button a {
+    color: black;
+    text-decoration: none; }
 
 .single-product-title {
   color: #d99054;
