added styling to journal page

--- a/themes/inhabitent-theme/sass/_journal.scss
+++ b/themes/inhabitent-theme/sass/_journal.scss
@@ -1,11 +1,11 @@
-
 //journal page
 .journal-main {
     display: flex;
     flex-direction: column;
-	font-family: 'merriweatherlight', sans-serif;
+	font-family: 'merriweather', sans-serif;
     width: 840px;
     padding: 25px;
+
 }
 
 .site-content {
@@ -56,7 +56,7 @@
 	bottom: 7px;
 	right: 0;
 	padding: 0 10px;
-	font-family: 'Novecento', sans-serif;
+	font-family: 'novecento', sans-serif;
 	color: white;
 	background-color: $color_green_brand;
 
@@ -74,3 +74,47 @@
 		}
 	}
 }
+
+.entry-footer {
+	font-family: 'novecento', sans-serif;
+	text-transform: uppercase;
+	.cat-links {
+		padding-right: 20px;
+		a {
+			text-decoration: none;
+			color: $color_green_brand;
+		}
+	}
+	.tags-links {
+		a {
+			text-decoration: none;
+			color: $color_green_brand;
+		}
+	}
+
+}
+
+.single-journal-media {
+	button {
+		background-color: white;
+		border: 1px solid black;
+		padding: 10px 20px;
+		font-family: 'novecento', sans-serif;
+		font-size: 20px;
+		text-transform: uppercase;
+		i {
+			font-size: 20px;
+				
+			&:before {
+				margin-right: 7px;
+			}
+		}
+		&:hover {
+			background-color: $color_green_brand;
+			border: $color_green_brand;
+			color: white;
+				
+		}
+	}
+}
+
