--- a/themes/inhabitent-theme/sass/style.scss
+++ b/themes/inhabitent-theme/sass/style.scss
@@ -72,3 +72,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "searchpage";
 @import "single-product";
 @import "404-error";
+@import "comments";
