--- a/themes/inhabitent-theme/sass/style.scss
+++ b/themes/inhabitent-theme/sass/style.scss
@@ -1,9 +1,9 @@
 /*!
-Theme Name: RED Starter Theme
+Theme Name: Inhabitent Theme
 Theme URI: http://underscores.me/
-Author: RED Academy
-Author URI: http://www.redacademy.com
-Description: A WordPress starter theme for RED Academy students.
+Author: Joseph Lam
+Author URI: https://github.com/Joseph-Lam/Project-4-Inhabitent-Website
+Description: A WordPress theme customized for the inhabitent project at RED academy.
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
@@ -43,6 +43,16 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 	## Galleries
 # Page Templates
 	## Front page
+# "footer"
+# "journal"
+# "frontpage"
+# "findus"
+# "archive-product"
+# "about"
+# "searchpage"
+# "single-product"
+# "404-error"
+# "comments"
 --------------------------------------------------------------*/
 
 // Imported but not included in the stylesheet.
