error validate and fixed category page

--- a/themes/inhabitent-theme/sass/_comments.scss
+++ b/themes/inhabitent-theme/sass/_comments.scss
@@ -1,3 +1,4 @@
+
 .comments-title {
 	font-size: 42px;
     font-family: 'novecento', sans-serif;
@@ -55,6 +56,7 @@
 	margin-bottom: 0;
 }
 
+//styling comment submission form
 .comment-form {
 	font-family: 'merriweather', sans-serif;
 	display: flex;
