--- a/themes/inhabitent-theme/sass/_archive-product.scss
+++ b/themes/inhabitent-theme/sass/_archive-product.scss
@@ -1,3 +1,8 @@
+.archive-main {
+	display: flex;
+	justify-content: center;
+}
+
 .product {
 	.shop-grid-item {
 		display: flex;
@@ -18,6 +23,9 @@
 		margin: 0 30px;
 		font-size: 30px;
 		color: $color_green_brand;
+		&:hover {
+			color: black;
+		}
 	}
 }
 
@@ -88,6 +96,7 @@
 //styling for category page
 .category-header {
 	p {
+		font-family: 'merriweather', sans-serif;
 		text-align: center;
 	}
 }
@@ -96,7 +105,6 @@
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: row-reverse;
-	width: 1000px;
 	padding: 100px 0;
     border-top: 1px dashed $color_dashed_border;
 	.product {
@@ -104,3 +112,4 @@
 		flex: 1 0 25%;
 	}
 }
+
