error validated journal pages

--- a/themes/inhabitent-theme/sass/_forms.scss
+++ b/themes/inhabitent-theme/sass/_forms.scss
@@ -71,8 +71,5 @@ textarea {
 	border: 1px solid $color_solid_border;
 	margin-bottom: 20px;
 	margin-top: 10px;
-}
-
-.wpcf7-submit {
-
+	width: 800px;
 }
