--- a/themes/inhabitent-theme/style.css
+++ b/themes/inhabitent-theme/style.css
@@ -452,7 +452,8 @@ textarea {
   background-color: #f4f4f4;
   border: 1px solid #e1e1e1;
   margin-bottom: 20px;
-  margin-top: 10px; }
+  margin-top: 10px;
+  width: 800px; }
 
 /*--------------------------------------------------------------
 # Navigation
@@ -470,7 +471,6 @@ a {
   a:hover, a:active {
     outline: 0; }
 
-/* Menus */
 .header-fixed {
   height: 50px; }
 
@@ -482,7 +482,7 @@ a {
   padding: 0 300px;
   border-bottom: 0.5px solid #a1a1a1;
   position: fixed;
-  z-index: 0;
+  z-index: 90;
   width: 100%;
   background-color: white;
   opacity: 0.7; }
@@ -833,7 +833,8 @@ object {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   -ms-flex-pack: center;
-      justify-content: center; }
+      justify-content: center;
+  margin-top: 5px; }
 
 .widget-area {
   display: -ms-flexbox;
